<resources>
    <string name="app_name">A way out</string>
    <string name="demo_button">Jouer (démo)</string>
    <!-- Choix du niveau -->
    <string name="choix_du_niveau"> Choix du niveau</string>
    <!-- Menu principale -->
    <!--Demo -->
    <string name="inventaire">Inventaire</string>
    <string name="enigmes">Enigmes</string>
    <string name="qr_code">Loupe</string>
    <string name="timer">99:99</string>
    <!-- Inventaire -->
    <string name="title">Title</string>
    <string name="titleInventoryMenu">Votre inventaire</string>
    <string name="description">"Appuyez sur un des éléments pour l\'observer. Pour combiner un objet à celui-ci, appuyez sur la flèche puis sur le deuxième objet. Une combinaison invalide vous donnera une pénalité de temps."</string>
    <string name="desc_play_button">Jouer</string>
    <!--fin de niveau-->
    <string name="histoire1">Dans l\'armoire se trouve la clé qui permet de sortir de la pièce mais aussi des mysterieux contrats leguant toute la fortune  de Lady Doubtshire à ses héritiers ! \n L\'un d\'entre eux en aurait-il eu marre d\'attendre ? Et comment Lady Doubtshire a-t-elle été tuée ? Fouillez la prochaine pièce pour le savoir !</string>
    <string name="fin_perdue">Votre temps est écoulé ! Le majordome vous escortes hors de la maison alors qu\'il vous manque des indices. Essayez de repasser  plus tard !</string>
    <string name="ExitGame">Est vous sur de vouloir quitter le niveau ? \n Votre progression sera perdue.</string>
</resources>